--- a/app/globals.css
+++ b/app/globals.css
@@ -96,3 +96,14 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+* {
+  -ms-overflow-style: none; 
+  scrollbar-width: none; 
+}
+
