--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,10 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+body::-webkit-scrollbar {
+  display: none;
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
@@ -90,5 +94,9 @@ body {
   }
   body {
     @apply bg-background text-foreground;
+    scrollbar-width: none;
+    ::webkit-scrollbar {
+      display: none;
+    }
   }
 }
